# milliman_training

./: .gitignore
profesor/python/1_basicos/: operadores_comparacion.py  operadores_logicos.py  operadores_matematicos.py  variables_tipos.py
profesor/python/2_flujo/1_condicionales/: condicional_abrevidado.py  condicional_anidado.py  condicional_simple.py  condicional_simple_escape.py  ejercicio1.py
profesor/python/2_flujo/2_bucles_loops/: break.py  for.py  while.py
profesor/python/2_flujo/3_funciones/: ambito.py  ejemplo_recursividad.py  funcion_con_parametros.py  funcion_simple.py  funciones.lambda.py  funciones_parametros_indefinidos.py  funciones_recursiva.py
profesor/python/3_estructuras_datos/1_tuples/: tuple.py
profesor/python/3_estructuras_datos/2_sets/: metodo_add_muchos.py  sets.py
profesor/python/3_estructuras_datos/3_listas/: filter.py  funciones_lista.py  lista.py  map.py
profesor/python/3_estructuras_datos/4_diccionarios/: diccionarios.py  lista_diccionarios.py
profesor/python/4_excepciones/: excepciones1.py  excepciones2.py  excepciones3.py
profesor/python/5_manejo_de_ficheros/csv/: leer_csv.py
profesor/python/6_POO/: auto.py  calculadora.py  main.py
profesor/python/7_librerias/libreria_numpy/: main.py  (+2 more)
profesor/python/8_dash_graficas/: app_grafica_barra.py  app_grafica_linea.py  app_tablas.py  app_v1.py  app_v2.py  app_v3.py  main.py  pyproject.toml
profesor/python/8_dash_graficas/data/: cartera.csv
profesor/python/ejercicios/: intrucciones.md
profesor/python/gestion_proyectos/proyecto_documentacion/: main.py  pyproject.toml
profesor/python/gestion_proyectos/proyecto_documentacion/docs/source/: conf.py  index.rst  main_page.rst
(+25 files in other folders)
